--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ https://templatemo.com/tm-556-catalog-z
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <i class="fas fa-film mr-2"></i>
                 Vinh T. Nguyen
             </a>
@@ -36,33 +36,33 @@ https://templatemo.com/tm-556-catalog-z
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link nav-link-1 active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link nav-link-1 active" aria-current="page" href="index.html#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-2" href="videos.html">Videos</a>
+                    <a class="nav-link nav-link-2" href="videos.html">Portfolio</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link nav-link-3" href="about.html">About</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <!-- <a class="nav-link nav-link-4" href="contact.html">Contact</a> -->
-                    <a class="nav-link js-scroll-trigger" href="https://www.yan-holtz.com/#contact">Contact</a>
+                    <a class="nav-link js-scroll-trigger" href="https://vaarelsauce.github.io/Portfolio/index.html#contact">Contact</a>
                 </li>
             </ul>
             </div>
         </div>
     </nav>
 
-
-    <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="img/hero.jpg">
-        <!-- <form class="d-flex tm-search-form">
-            <input class="form-control tm-search-input" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success tm-search-btn" type="submit">
-                <i class="fas fa-search"></i>
-            </button>
-        </form> -->
-    </div>
-
+    <section class="" id="home" style="padding-top: 0px; padding-bottom: 0px"></section>
+        <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="img/hero.jpg">
+            <!-- <form class="d-flex tm-search-form">
+                <input class="form-control tm-search-input" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success tm-search-btn" type="submit">
+                    <i class="fas fa-search"></i>
+                </button>
+            </form> -->
+        </div>
+    </section>
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
