--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://templatemo.com/tm-556-catalog-z
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <i class="fas fa-film mr-2"></i>
+                <i class="fas fa-database"></i>
                 Vinh T. Nguyen
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,14 +39,14 @@ https://templatemo.com/tm-556-catalog-z
                     <a class="nav-link nav-link-1 active" aria-current="page" href="index.html#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-2" href="videos.html">Portfolio</a>
+                    <a class="nav-link nav-link-2" href="index.html#portfolio">Portfolio</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link nav-link-3" href="about.html">About</a>
                 </li> -->
                 <li class="nav-item">
                     <!-- <a class="nav-link nav-link-4" href="contact.html">Contact</a> -->
-                    <a class="nav-link js-scroll-trigger" href="https://vaarelsauce.github.io/Portfolio/index.html#contact">Contact</a>
+                    <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
                 </li>
             </ul>
             </div>
@@ -62,7 +62,7 @@ https://templatemo.com/tm-556-catalog-z
                 </button>
             </form> -->
         </div>
-    </section>
+    <section class="" id="portfolio" style="padding-top: 0px; padding-bottom: 0px"></section>
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
@@ -76,7 +76,7 @@ https://templatemo.com/tm-556-catalog-z
         </div>
         <div class="row tm-mb-90 tm-gallery">
         	<div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
-                <figure class="effect-ming tm-video-item">
+                <figure class="border border-3 border-primary effect-ming tm-video-item">
                     <img src="img/img-03.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Clocks</h2>
