--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalog-Z Bootstrap 5.0 HTML Template</title>
+    <title>Vinh T. Nguyen | Personal Website</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
@@ -12,6 +12,7 @@
 TemplateMo 556 Catalog-Z
 
 https://templatemo.com/tm-556-catalog-z
+https://templatemo.com/live/templatemo_556_catalog_z
 
 -->
 </head>
@@ -76,7 +77,7 @@ https://templatemo.com/tm-556-catalog-z
         </div>
         <div class="row tm-mb-90 tm-gallery">
         	<div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
-                <figure class="border border-3 border-primary effect-ming tm-video-item">
+                <figure class="border border-3 border-white effect-ming tm-video-item">
                     <img src="img/img-03.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Clocks</h2>
